# speech

./: .env.example  .gitignore  Caddyfile  docker-compose.prod.yml  docker-compose.yml
.claude/: launch.json
backend/: Dockerfile  Dockerfile.prod  alembic.ini  gcp_export_data.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: health.py  models.py  recordings.py  texts.py  training.py  transcriptions.py
backend/app/core/: audio_utils.py  database.py  hebrew_utils.py
backend/app/models/: __init__.py  coaching_report.py  model_version.py  recording.py  text.py  training_run.py  transcription.py
backend/app/schemas/: model_version.py  recording.py  text.py  training.py  transcription.py
backend/app/services/: coaching_agent.py  comparison_service.py  gcp_training_service.py  model_manager.py  recording_service.py  storage_service.py  text_generator.py  transcription_service.py  vertex_training_service.py  whisper_service.py
backend/app/tasks/: celery_app.py  fine_tune_task.py
backend/data/seed_texts/: easy.json  hard.json  medium.json
backend/scripts/: seed_texts.py
backend/training/: config.py  data_collator.py  dataset.py  evaluate.py  export.py  trainer.py  tts_augmentation.py  tts_text_generator.py  vertex_entrypoint.py
frontend/: Dockerfile.prod  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  (+1 more)
gcp/: Dockerfile.gpu  deploy.sh  entrypoint_train.sh  setup.sh  train_remote.sh
(+19 files in other folders)
